# ZED_DepthCam_PoseExtraction

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/object_filter_package/lib/object_filter_package/: object_filter_node  onnxrun  test
install/object_filter_package/share/object_filter_package/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/zed_components/share/zed_components/: package.sh
install/zed_ros2/share/zed_ros2/: local_setup.sh  package.sh
install/zed_wrapper/share/zed_wrapper/: package.sh
log/: latest_build
src/object_filter_package/: CMakeLists.txt  setup.cfg  setup.py
src/object_filter_package/msg/: YoloObject.msg
src/object_filter_package/object_filter_package/: last_working_code  onnxrun.py
