<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>object_filter_package</name>
  <version>0.0.0</version>
  <description>Package for filtering objects and publishing YOLO data</description>
  <maintainer email="rm@todo.todo">rm</maintainer>
  <license>TODO: License declaration</license>

  <!-- Core Dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <!-- Message Generation Dependencies -->
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>builtin_interfaces</depend>  <!-- Needed for message timestamps if used -->

  <!-- Group for ROS 2 Message Interfaces -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Testing Dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
